force-app/main/default/objects/LoggingSetting__mdt/LoggingSetting__mdt.object-meta.xml
<CustomObject>
    <description>Logging Settings to be used with the Universal Logging.</description>
    <label>Logging Setting</label>
    <pluralLabel>Logging Settings</pluralLabel>
</CustomObject>