force-app/main/default/objects/LoggingSetting__mdt/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>The Account Identifier for the external LaaS Service</description>
    <inlineHelpText>The Account Identifier for the external LaaS Service</inlineHelpText>
    <label>Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>