force-app/main/default/objects/LoggingSetting__mdt/fields/EndpointPattern__c.field-meta.xml
<CustomField>
    <fullName>EndpointPattern__c</fullName>
    <description>The Pattern for the URL Endpoint</description>
    <inlineHelpText>The Pattern for the URL Endpoint</inlineHelpText>
    <label>Endpoint Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>