force-app/main/default/objects/LoggingSetting__mdt/fields/LogTags__c.field-meta.xml
<CustomField>
    <fullName>LogTags__c</fullName>
    <description>Comma separated list of tags to tag the log with in order to make it easier to locate with in the LaaS Service.</description>
    <inlineHelpText>Comma separated list of tags to tag the log with in order to make it easier to locate with in the LaaS Service.</inlineHelpText>
    <label>Log Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>